--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Loading Movie Magic...</title>
   <meta http-equiv="refresh" content="6;URL='https://movie-recommendation-system-using-eikc.onrender.com'" />
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="VJ_logo_round.ico" type="image/x-icon"
 </head>
 <body>
   <div class="cinema-screen">
